infrastructure/kubernetes/overlays/prod/patch-env.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-gateway
  namespace: smart-hiring
spec:
  template:
    spec:
      containers:
        - name: api-gateway
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: resume-parser-service
  namespace: smart-hiring
spec:
  template:
    spec:
      containers:
        - name: resume-parser-service
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: screening-bot-service
  namespace: smart-hiring
spec:
  template:
    spec:
      containers:
        - name: screening-bot-service
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: candidate-matcher-service
  namespace: smart-hiring
spec:
  template:
    spec:
      containers:
        - name: candidate-matcher-service
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: interview-prep-service
  namespace: smart-hiring
spec:
  template:
    spec:
      containers:
        - name: interview-prep-service
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: notification-service
  namespace: smart-hiring
spec:
  template:
    spec:
      containers:
        - name: notification-service
