infrastructure/kubernetes/overlays/prod/patch-replicas-and-hpa.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-gateway
  namespace: smart-hiring
spec:
  replicas: 3
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: resume-parser-service
  namespace: smart-hiring
spec:
  replicas: 3
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: screening-bot-service
  namespace: smart-hiring
spec:
  replicas: 3
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: candidate-matcher-service
  namespace: smart-hiring
spec:
  replicas: 3
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: interview-prep-service
  namespace: smart-hiring
spec:
  replicas: 3
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: notification-service
  namespace: smart-hiring
spec:
  replicas: 3
